--- a/spaceX/src/App.css
+++ b/spaceX/src/App.css
@@ -1,12 +1,42 @@
 .main_section {
-  padding: 20px;
+  width: 1500px;
+  height: 90dvh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 h1 {
   text-align: center;
+  font-size: 48px;
+
+  margin-bottom: 100px;
 }
 
-button{
-  margin: 20px;
-  padding: 6px;
+button {
+  padding: 8px;
+  width: 138px;
+  margin-top: 40px;
+  cursor: pointer;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+}
+
+#csv{
+  border: 1px dashed;
+  border-radius: 4px;
+}
+
+.buttons{
+  display: flex;
+  gap: 30px;
+  width: 100%;
+}
+
+.ag-theme-alpine-dark{
+  --ag-font-size: 18px;
 }
